--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
-body{
-background-color: black;
-color: white;
-margin: 0px;
+body {
+    color: white;
+    background: black;
+    margin: 0px;
     font-family: "Chakra Petch", sans-serif;
     margin-bottom: 100px;
 }
-
 
 header {
     border-bottom: solid 2px rgb(42, 122, 228);
